[package]
name = "hasher"
version = "0.1.2"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
description = "Package hasher provides a Hasher trait."
license = "MIT"
homepage = "https://github.com/cryptape/hasher"
documentation = "https://github.com/cryptape/hasher/blob/master/README.md"

[dependencies]
tiny-keccak = { version = "1.4", optional = true }
blake2b-rs = { version = "0.1", optional = true }
libsm = { git = "https://github.com/cryptape/libsm", rev = "4d0e6199fca0934c58131de1d0036e9aa4da26c1", optional = true }

[features]
default = []
hash-keccak = ["tiny-keccak"]
hash-blake2b = ["blake2b-rs"]
hash-sm3 = ["libsm"]
